<resources>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="logo">Better Jira</string>
    <string name="app_name">BetterJira</string>
    <string name="http">http://</string>
    <string name="description">Description</string>
    <string name="url">http://example.com:80</string>
    <string name="key">PROJECT-KEY</string>
    <string name="key_issue">ISSUE-KEY</string>
    <string name="project_name">Project name</string>
    <string name="task">Nazwa zadania</string>
    <string name="nic"></string>
    <string name="ikona">ikona_taska</string>
    <string name="priorytet">ikona_priorytetu</string>
    <string name="skrót2">BET-1</string>
    <string name="avatar_proj">avatar</string>
    <string name="opis">Opis zadania</string>
    <string name="kogo">Imie Nazwisko</string>
    <string name="komentarz">Komentarz</string>
    <string name="data_kom">02.02.2014</string>
    <string name="komentator">Imie Nazwisko</string>
    <string name="no_filters">Brak filtrów</string>
    <string name="filters">Nazwa filtru</string>
    <string name="no_task">Brak zadań</string>
    <string name="invalid_url">Invalid url</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="automaticly_login">Automaticly login</string>
    <string name="save_form">Save form</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="lead">Lead</string>
    <string name="project_icon">Project Icon</string>
    <string name="assigne">Assigne</string>
    <string name="reporter">Reporter</string>
    <string name="filter_name">Filter name</string>
    <string name="filter">JQL JQL JQL JQL</string>
    <string name="people">People</string>
    <string name="assignee_">Assignee:</string>
    <string name="reporter_">Reporter:</string>
    <string name="details">Details</string>
    <string name="type_">Type:</string>
    <string name="priority_">Priority:</string>
    <string name="status_">Status:</string>
    <string name="resolution_">Resolution:</string>
    <string name="click_to_add_description">Click to add description</string>
    <string name="dates">Dates</string>
    <string name="created_">Created:</string>
    <string name="updated_">Updated:</string>    
</resources>