<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/url"
            android:text="https://jira.wmi.amu.edu.pl/"
            android:textColor="#FF000000" >
            <requestFocus />
        </AutoCompleteTextView>
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/login"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#FF000000" >
        </AutoCompleteTextView>
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#FF000000" />
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/login" />
        <CheckBox
            android:id="@+id/checkBoxSaveForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/save_form" />
        <CheckBox
            android:id="@+id/checkBoxAutoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automaticly_login" />
    </LinearLayout>
</ScrollView>