<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <!-- Commentator name -->
        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="5dp"
            android:text="@string/komentator"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <!-- Date of comment -->
        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="5dp"
            android:text="@string/data_kom" />
    </RelativeLayout>
    <!-- Comment shown in row -->
    <TextView
        android:id="@+id/textViewBody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/komentarz"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>